syntax = "proto3";

package profiling;

message SimulationProfile {
  repeated ProfilingEvent profilingEvents = 1;
}

message ProfilingEvent {
  string key = 1;
  uint64 duration = 2;
  optional uint32 simTime = 3;
  optional Metadata metadata = 4;
}

message Metadata {
  oneof type {
    NodeInformationData nodeInformation = 3;
    QSimStepData qSimStep = 4;
    QSimUpdateData qSimUpdate = 5;
    TravelTimeUpdateData travelTimeUpdate = 6;
    RoutingRequestData routingRequest = 7;
  }
}

message NodeInformationData {
  uint64 localLinks = 1;
  uint64 splitInLinks = 2;
  uint64 splitOutLinks = 3;
  repeated uint64 neighbours = 4;
}

message QSimStepData {
  uint64 vehicles = 1;
  uint64 agents = 2;
}

message QSimUpdateData {
  uint64 size = 1;
}

message TravelTimeUpdateData {
  uint64 updates = 1;
}

message RoutingRequestData {
  uint64 travelTime = 1;
}